#49: fixed by using li-utils 1.4.0
Upgraded li-zookeeper to 1.3.0 and zookeeper to 3.3.3

Also fixed #48